1.0.3

1.0.2 (November 1, 2020)
 -Remove "all variables" checkbox from InputVariablesDialog (#552)
 -Change Analytics Panel defaults to "Last Visit" and p-val=0.05 (#554)
 -Improve/simplify auto-create cohorts wizard (#553)

1.0.1 (October 27, 2020)
 -Add Changelog
 -Display version number in Sidebar
 -Replace 'ROC' with 'Rate of Change' (#547)
 -Fix checkbox/selection bug in output variables dialog (#549)

1.0.0 (October 16, 2020)
 -Initial (pre-release) for preliminary user testing.