@@ -109,8 +109,8 @@ CREATE TABLE `cohort_query` (
   `id` int(11) NOT NULL AUTO_INCREMENT,
   `cohort_id` int(11) NOT NULL,
   `input_variable_id` int(11) NOT NULL,
-  `min_value` decimal(11,2) DEFAULT NULL,
-  `max_value` decimal(11,2) DEFAULT NULL,
+  `min_value` decimal(15,5) DEFAULT NULL,
+  `max_value` decimal(15,5) DEFAULT NULL,
   `value` varchar(255) DEFAULT NULL,
   PRIMARY KEY (`id`),
   KEY `fk_cohort_query_cohort1_idx` (`cohort_id`),
@@ -306,7 +306,7 @@ CREATE TABLE `observation` (
   `subject_visit_id` int(11) NOT NULL,
   `value_type` enum('int','string','date','char','decimal') NOT NULL,
   `int_value` int(11) DEFAULT NULL,
-  `dec_value` decimal(10,0) DEFAULT NULL,
+  `dec_value` decimal(15,5) DEFAULT NULL,
   PRIMARY KEY (`id`),
   UNIQUE KEY `subject_visit_id_UNIQUE` (`subject_visit_id`,`observation_ontology_id`),
   KEY `fk_observation__subject_visit_id_idx` (`subject_visit_id`),
@@ -351,7 +351,7 @@ CREATE TABLE `observation_summary` (
   `observation_ontology_id` int(11) NOT NULL,
   `value_type` enum('int','decimal') DEFAULT NULL,
   `int_value` int(11) DEFAULT NULL,
-  `dec_value` decimal(10,0) DEFAULT NULL,
+  `dec_value` decimal(15,5) DEFAULT NULL,
   `value` varchar(45) DEFAULT NULL,
   PRIMARY KEY (`id`),
   UNIQUE KEY `subject_id_ontology_id_UNIQUE` (`subject_id`,`observation_ontology_id`),
@@ -493,7 +493,7 @@ CREATE TABLE `subject_attribute` (
   `value` varchar(255) NOT NULL,
   `value_type` enum('int','string','date','decimal','char') NOT NULL,
   `int_value` int(11) DEFAULT NULL,
-  `dec_value` decimal(10,0) DEFAULT NULL,
+  `dec_value` decimal(15,5) DEFAULT NULL,
   `date_value` date DEFAULT NULL,
   PRIMARY KEY (`id`),
   KEY `fk_subject_attribute_subject1_idx` (`subject_id`),
